--- a/wp-content/themes/short-film/assets/short-film_less/sections/home.less
+++ b/wp-content/themes/short-film/assets/short-film_less/sections/home.less
@@ -15,6 +15,19 @@
     display: block;
 }
 
+// #land_vid {
+//     display: block;
+//     @media screen and (max-width: 680px) {
+//         display: none;
+//     }
+// }
+// .showinsmall {
+//     display: none;
+//     @media screen and (max-width: 680px) {
+//         display: block;
+//     }
+// }
+
 .movie-cat{
 	ul{
 		list-style-type: none;
@@ -320,7 +333,7 @@ h1.brand, h2.brand, h3.brand, h4.brand, h5.brand, h6.brand {color: @brand-primar
             text-align: left !important;
             .meta-ico-in, .lico {
                 display: inline-block;
-                vertical-align: middle;
+                vertical-align: top;
                 padding-right: 10px;
                 padding-left: 10px;
                 border-right: 1px solid #ccc;
