--- a/wp-content/themes/short-film/assets/short-film_less/sections/movie.less
+++ b/wp-content/themes/short-film/assets/short-film_less/sections/movie.less
@@ -871,7 +871,7 @@
 
 
 //styling WP content
-.img-content {
+.img-content, .post_content {
     font-size: 15px;
     color: #787878;
     ol {margin-top: 10px; margin-bottom: 10px;}
